--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".activity.MainActivity">
     <Button
             android:text="Audio intern"
             android:layout_width="wrap_content"
@@ -47,4 +47,11 @@
             app:layout_constraintStart_toEndOf="@+id/button_videoIntern" android:layout_marginLeft="22dp"
             android:layout_marginStart="22dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/button_audioExtern"/>
+    <Button
+            android:text="WeatherStation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button2"
+            app:layout_constraintTop_toBottomOf="@+id/button_videoExtern"
+            android:layout_marginTop="60dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="104dp"
+            android:layout_marginRight="104dp" android:onClick="weatherStationActivity"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
