--- a/app/src/main/res/layout/activity_weather_station.xml
+++ b/app/src/main/res/layout/activity_weather_station.xml
@@ -5,11 +5,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.SearchActivity">
+        tools:context=".activity.WeatherStationActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/listView"/>
-
+            android:layout_width="409dp"
+            android:layout_height="729dp" tools:layout_editor_absoluteY="1dp" tools:layout_editor_absoluteX="1dp"
+            android:id="@+id/recycler_view"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
