--- a/app/src/main/res/layout/songview_row.xml
+++ b/app/src/main/res/layout/songview_row.xml
@@ -10,7 +10,7 @@
             android:text="name"
             android:layout_width="280dp"
             android:layout_height="20dp"
-            android:id="@+id/name"
+            android:id="@+id/stationname"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="4dp" android:layout_marginStart="4dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/album"/>
