--- a/app/src/main/res/layout/songview_row_backup.xml
+++ b/app/src/main/res/layout/songview_row_backup.xml
@@ -6,7 +6,7 @@
               android:padding="10dp">
 
     <TextView
-            android:id="@+id/name"
+            android:id="@+id/stationname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"/>
